--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@tanstack/react-query": "^5.75.7",
     "bcryptjs": "^3.0.3",
     "lucide-react": "^0.562.0",
-    "next": "15.3.3",
+    "next": "^15.5.9",
     "next-auth": "^5.0.0-beta.30",
     "nextjs-toploader": "^3.8.16",
     "pino-pretty": "^13.0.0",
